# paleo-gpr-ml

./: .gitignore  README.md  environment.yml  ml_report_rules.md  pyproject.toml  requirements.txt
configs/: fossil_classifier.yaml  gpr_baseline.yaml  gpr_synthetic.yaml
docs/: data_understanding.md  experiment_01_baseline.md  experiment_02_detection.md  immediate_research_todo.md  literature_matrix.md  next_steps_todo.md  project_ideas.md  project_scope.md  research_log.md  roadmap.md  synthetic_data_plan.md
docs/notes/: 01_gpr_eda_notes.md  02_baseline_experiment_notes.md  03_literature_synthesis.md  04_gradcam_notes.md  05_research_contribution.md  06_detection_experiment_notes.md
notebooks/: 01_literature_review_notes.ipynb  02_baseline_classification.ipynb  02_gpr_data_exploration.ipynb  03_synthetic_gpr_generation.ipynb  04_fossil_image_baselines.ipynb  04_object_detection.ipynb
papers/reading_notes/: 01_ai_in_paleontology.md  02_gpr_vertebrate_skeleton_detection.md  03_gpr_dinosaur_bones_sicily.md  04_gpr_ai_review_2022.md  05_fossil_ct_segmentation_2022.md  06_fossil_ct_acceleration_2024.md
results/detection/yolov8n_2class/: args.yaml  results.csv
results/tables/: baseline_results.csv  detection_results.csv
src/: __init__.py  config.py
src/data/: build_splits.py  download_data.py  prepare_detection_data.py  preprocess_fossils.py  preprocess_gpr.py
src/features/: build_features.py
src/models/: evaluate.py  inference.py  train_fossil_classifier.py  train_gpr_detector.py
src/utils/: io.py
src/visualization/: plot_gpr.py  plot_results.py
(+2 files in other folders)
